# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

config("include_config") {
  include_dirs = [ "include" ]
}

shared_library("SDL2") {
  public_configs = [ ":include_config" ]
  defines = [ "SDL_VIDEO_DRIVER_FUCHSIA",
    "SDL_FILESYSTEM_UNIX",
    "SDL_RENDER_DISABLED",
    "SDL_JOYSTICK_DISABLED",
    "SDL_HAPTIC_DISABLED",
  ]
  cflags_c = [ "-Wno-sign-compare",
    "-Wno-int-conversion",
    "-Wno-incompatible-pointer-types",
    "-Wno-implicit-function-declaration",
  ]
  sources = [ 
    "src/SDL.c",
    "src/SDL_assert.c",
    "src/SDL_dataqueue.c",
    "src/SDL_error.c",
    "src/SDL_hints.c",
    "src/SDL_log.c",
    "src/atomic/SDL_atomic.c",
    "src/atomic/SDL_spinlock.c",
    "src/audio/SDL_audio.c",
    "src/audio/SDL_audiocvt.c",
    "src/audio/SDL_audiotypecvt.c",
    "src/audio/SDL_mixer.c",
    "src/audio/SDL_wave.c",
    "src/audio/dummy/SDL_dummyaudio.c",
    "src/cpuinfo/SDL_cpuinfo.c",
    "src/dynapi/SDL_dynapi.c",
    "src/events/SDL_clipboardevents.c",
    "src/events/SDL_dropevents.c",
    "src/events/SDL_events.c",
    "src/events/SDL_gesture.c",
    "src/events/SDL_keyboard.c", 
    "src/events/SDL_mouse.c",
    "src/events/SDL_quit.c",
    "src/events/SDL_touch.c",
    "src/events/SDL_windowevents.c",
    "src/file/SDL_rwops.c",
    "src/filesystem/unix/SDL_sysfilesystem.c",
    "src/haptic/SDL_haptic.c",
    "src/haptic/dummy/SDL_syshaptic.c",
    "src/joystick/SDL_joystick.c",
    "src/joystick/SDL_gamecontroller.c",
    "src/joystick/dummy/SDL_sysjoystick.c",
    "src/libm/e_atan2.c",
    "src/libm/e_fmod.c",
    "src/libm/e_log.c",
    "src/libm/e_pow.c",
    "src/libm/e_rem_pio2.c",
    "src/libm/e_sqrt.c",
    "src/libm/k_cos.c",
    "src/libm/k_rem_pio2.c",
    "src/libm/k_sin.c",
    "src/libm/k_tan.c",
    "src/libm/s_atan.c",
    "src/libm/s_copysign.c",
    "src/libm/s_cos.c",
    "src/libm/s_fabs.c",
    "src/libm/s_floor.c",
    "src/libm/s_scalbn.c",
    "src/libm/s_sin.c",
    "src/libm/s_tan.c",
    "src/power/SDL_power.c",
    "src/loadso/dlopen/SDL_sysloadso.c",
    "src/render/SDL_render.c",
    "src/render/SDL_yuv_sw.c",
    "src/stdlib/SDL_getenv.c",
    "src/stdlib/SDL_iconv.c",
    "src/stdlib/SDL_malloc.c",
    "src/stdlib/SDL_qsort.c",
    "src/stdlib/SDL_stdlib.c",
    "src/stdlib/SDL_string.c",
    "src/thread/SDL_thread.c",
    "src/thread/generic/SDL_syscond.c",
    "src/thread/generic/SDL_sysmutex.c",
    "src/thread/generic/SDL_syssem.c",
    "src/thread/generic/SDL_systhread.c",
    "src/thread/generic/SDL_systls.c",
    "src/timer/SDL_timer.c",
    "src/timer/unix/SDL_systimer.c",
    "src/video/SDL_shape.c",
    "src/video/SDL_bmp.c",
    "src/video/SDL_clipboard.c",
    "src/video/SDL_fillrect.c",
    "src/video/SDL_rect.c",
    "src/video/SDL_RLEaccel.c",
    "src/video/SDL_pixels.c",
    "src/video/SDL_stretch.c",
    "src/video/SDL_surface.c",
    "src/video/SDL_video.c",
    "src/video/SDL_vulkan_utils.c",
    "src/video/SDL_yuv.c",
    "src/video/SDL_blit.c",
    "src/video/SDL_blit_0.c",
    "src/video/SDL_blit_1.c",
    "src/video/SDL_blit_A.c",
    "src/video/SDL_blit_N.c",
    "src/video/SDL_blit_auto.c",
    "src/video/SDL_blit_copy.c",
    "src/video/SDL_blit_slow.c",
    "src/video/fuchsia/SDL_fuchsiavideo.cc",
    "src/video/fuchsia/SDL_fuchsiaview.cc",
    "src/video/fuchsia/SDL_fuchsiainput.cc",
    "src/video/fuchsia/SDL_fuchsiavulkan.cc",
    "src/video/yuv2rgb/yuv_rgb.c",
  ]
  deps = [
    "//garnet/lib/magma:libmagma",
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fsl",
    "//garnet/public/lib/ui/view_framework:view_provider",
    "//garnet/public/lib/ui/views/fidl",
    "//zircon/public/lib/hid",
    "//zircon/public/lib/launchpad",
    "//zircon/public/lib/backtrace",
  ]
}
